--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,11 @@ header {
     background-color: rgb(37, 37, 37);
     width: 100%;
 }
+/*logo header y footer*/
+.logoheader {
+    width: 100px;
+    height: 100px;
+}
 
 /*?----BARRA DE NAVEGACIÓN----------------------*/
 .barranav{
@@ -28,7 +33,7 @@ header nav{
 }
 
 header nav ul li {
-    margin: 15px 15px 10px 10px
+    margin: 15px 15px 10px 10px;
 }
 
 /*!---------------------------MAIN------------------------*/
@@ -185,7 +190,7 @@ header nav ul li {
 
 .productos div {
     width: 167px;
-    height: 311px;
+    height: 312px;
     border: 1px solid black;
     margin: 20px;
     background-color: rgb(204, 203, 203);
@@ -212,7 +217,7 @@ header nav ul li {
 .productoboton {
     display: flex;
     justify-content: center;
-    margin: 5px 5px 5px 50px;
+    margin: 0px 20px 0px 20px;
 }
 
 /*?----SCROLL EN PAGINA DE PRODUCTOS Y AYUDA--------------------*/
@@ -252,7 +257,7 @@ header nav ul li {
     border-radius: 0px 25px 25px 0px;
 }
 
-/*!---------------------------FOOTER---------------------------------------*/
+/*!-------------------------------------FOOTER---------------------------------------*/
 footer {
     color: white;
     background-color: rgb(37, 37, 37);
@@ -263,7 +268,7 @@ footer {
 .grid-container {
     display: grid;
     grid-template-rows: repeat(3, 135px);
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
     row-gap: 10px;
 
 }
@@ -287,35 +292,38 @@ footer {
 
 /**----FOOTER INSTAGRAM---*/
 .segundoitem {
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: 4;
     align-items: center;
+    justify-items: left;
 }
 
 /**----FOOTER TWITTER---*/
 .terceritem {
     place-items: center;
     grid-column-start: 2;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
+    display: flex;
+    justify-content: center;
     align-items: center;
 
 }
 
 /**----FOOTER LOGO---*/
 .cuartoitem {
-    grid-column-start: 3;
-    grid-row-start: 3;
+    grid-column-start: 4;
+    grid-row-start: 4;
     justify-content: flex-end;
     align-items: end;
 }
 
 /**----FOOTER COPYRIGHT---*/
 .quintoitem {
-    grid-row-start: 3;
+    grid-row-start: 4;
     grid-column-start: 2;
-    grid-column-end: 2;
+    grid-column-end: 4;
     font-size: small;
     align-items: flex-end;
 }
@@ -344,7 +352,7 @@ footer {
 
 /**----FOOTER VACANTES---*/
 .septimoitem {
-    grid-column-start: 3;
+    grid-column-start: 4;
     grid-column-end: 4;
     grid-row-start: 2;
     grid-row-end: 3;
@@ -364,24 +372,16 @@ footer {
     margin: 10px;
 }
 
-/*!--------------MEDIA QUERIES (TABLET)-------------------------------------------------------------------------*/
-@media screen and (max-width:1440px) {
+/*!----------------------------------------------------MEDIA QUERIES (TABLET)-------------------------------------------------------------------------*/
+@media screen and (max-width:1350px) {
 
     /**----HERO SECTION---*/
     .hero {
         width: 100%;
+        height: 20%;
     }
 
-    .hero h2 {
-        font-size: large;
-        padding: 15px;
-        margin: 5% 20% 5% 20%;
-    }
 
-    .hero img {
-        width: 80% ;
-        height: 50% ;
-    }
 
     /*?----PRODUCTOS(INDEX, PAG PRODUCTOS)--------------------*/
     /**---------PAGINA AYUDA(RESPONSIVE)---*/
@@ -400,7 +400,7 @@ footer {
     /**---PRODUCTOS INDEX---*/
     .grid-producto-index {
         display: grid;
-        grid-template-rows: repeat(2, 310px);
+        grid-template-rows: repeat(2, 320px);
         grid-template-columns: repeat(3, 1fr);
         padding: 0 0 30px 0;
         place-items: center;
@@ -513,7 +513,7 @@ footer {
         grid-row-start: 4;
         grid-column-start: 2;
         grid-column-end: 4;
-        font-size: 10px;
+        font-size: 12px;
         justify-content: center;
         text-align: right;
         align-items: center;
@@ -860,7 +860,7 @@ footer {
     }
 }
 
-/*!----------MEDIA QUERIES PARA CELULAR-----------------------------------------------------------------------------*/
+/*!---------------------------------------------------------MEDIA QUERIES PARA CELULAR-----------------------------------------------------------------------------*/
 @media screen and (max-width:638px) {
 
     /**----HEADER-----*/
@@ -918,7 +918,14 @@ footer {
 
     /**---------PAGINA AYUDA(RESPONSIVE)---*/
     .garantiass {
-        height: 1700px;
+        height: 75%;
+    }
+    .garantiass{
+        background-position: center;
+        background-position-y: 50%;
+    }
+    .garantiass div p {
+        padding: 20px 25px 10px 25px;
     }
 
     .metodopago {
@@ -988,10 +995,11 @@ footer {
 
     .grid-producto {
         display: grid;
-        grid-template-rows: repeat(4, 310px);
+        grid-template-rows: repeat(4, 311px);
         grid-template-columns: repeat(2, 1fr);
         row-gap: 10px;
-        padding: 0 5% 10% 5%;
+        padding: 2% 0% 5% 0%;
+        justify-content: space-evenly;
     }
 
     /*?----FOOTER RESPONSIVE------------------------------------------*/
@@ -1053,7 +1061,7 @@ footer {
         grid-row-start: 3;
         grid-column-start: 1;
         grid-column-end: 4;
-        font-size: 10px;
+        font-size: 12px;
         justify-content: center;
         text-align: right;
         align-items: end;
