--- a/scss/Componentes/_header.scss
+++ b/scss/Componentes/_header.scss
@@ -1,5 +1,5 @@
 header{
-    background-color: rgb(37, 37, 37);
+    background-color: $color-principal /*rgb(37, 37, 37)*/;
     width: 100%;
     .logoheader{
         width: 100px;
@@ -9,6 +9,6 @@ header{
         font-size: 50px;
         font-weight: 100;
         text-align: center;
-        color: whitesmoke;
+        color: $color-letra-titulo /*whitesmoke*/;
     }
 }
